# mac2nix

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  prek.toml  pyproject.toml
.github/workflows/: pr-checks.yaml
src/mac2nix/: __init__.py  cli.py  orchestrator.py
src/mac2nix/models/: __init__.py  application.py  files.py  hardware.py  package_managers.py  preferences.py  services.py  system.py  system_state.py
src/mac2nix/scanners/: __init__.py  _utils.py  app_config.py  applications.py  audio.py  base.py  containers.py  cron.py  display.py  dotfiles.py  fonts.py  homebrew.py  launch_agents.py  library_audit.py  library_scanner.py  network.py  nix_state.py  package_managers_scanner.py  preferences.py  security.py  shell.py  system_scanner.py  version_managers.py
src/mac2nix/vm/: __init__.py  _utils.py  comparator.py  discovery.py  manager.py  validator.py
tests/: test_cli.py  test_cli_vm.py  test_orchestrator.py
tests/models/: test_application.py  test_dotfile.py  test_package_managers.py  test_preferences.py  test_remaining.py  test_system_state.py
tests/scanners/: conftest.py  test_app_config.py  test_applications.py  test_audio.py  test_base.py  test_containers.py  test_cron.py  test_display.py  test_dotfiles.py  test_fonts.py  test_homebrew.py  test_launch_agents.py  test_library_audit.py  test_library_scanner.py  test_network.py  test_nix_state.py  test_package_managers.py  test_parallel_walk.py  test_preferences.py  test_prefetch_injection.py  test_security.py  test_shell.py  test_system_scanner.py  test_utils.py  test_version_managers.py
tests/vm/: conftest.py  test_comparator.py  test_discovery.py  test_integration.py  test_manager.py  test_validator.py  test_vm_utils.py
