[project]
name = "mac2nix"
version = "0.1.0"
description = "Generate nix-darwin configurations from macOS system scans"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "click==8.3.1",
    "pydantic==2.12.5",
    "jinja2==3.1.6",
    "pyyaml==6.0.3",
    "rich==14.3.3",
]

[project.scripts]
mac2nix = "mac2nix.cli:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
    "pyright",
    "pre-commit",
]

[tool.ruff]
line-length = 120
target-version = "py313"
cache-dir = ".cache/ruff"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "T10",   # flake8-debugger
    "T20",   # flake8-print
    "S",     # flake8-bandit
    "DTZ",   # flake8-datetimez
    "RUF",   # Ruff-specific rules
    "SIM",   # flake8-simplify
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "A",     # flake8-builtins
    "ARG",   # flake8-unused-arguments
    "RET",   # flake8-return
    "RSE",   # flake8-raise
    "TID",   # flake8-tidy-imports
    "ISC",   # flake8-implicit-str-concat
    "PTH",   # flake8-use-pathlib
    "PL",    # Pylint rules
    "SLF",   # flake8-self
]
ignore = [
    "PLR2004",  # Magic value comparisons OK for CLI tool
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "S105", "S106", "S107", "S108", "SLF001", "ARG001"]  # assert + test data + credentials + private access + unused mock args OK in tests

[tool.ruff.lint.isort]
known-first-party = ["mac2nix"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
include = ["src"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-m", "not integration",
]
markers = [
    "integration: real VM tests — require tart + sshpass + base VM image",
]
cache_dir = ".cache/pytest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac2nix"]
